[package]
name = "server"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
walkdir = "2"
uhttp_sse = "0.5.1"
notify = "5.0.0-pre.6"
hyper = "0.14.4"
futures-core = "0.3.13"

[dependencies.tokio]
version = "1.2.0"
features = ["full"]