[package]
name = "mho"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
walkdir = "2"
clap = { git = "https://github.com/clap-rs/clap/" }
yansi = "0.5.0"

