[package]
name = "mho"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
walkdir = "2"
clap = "3.0.0-beta.2"
yansi = "0.5.0"

